<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/liner_action_v"
            style="@style/line_vertical"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/txt_division"
                style="@style/btn_action"
                android:text="@string/btn_division" />

            <TextView
                android:id="@+id/txt_multiplication"
                style="@style/btn_action"
                android:text="@string/btn_multiplication" />

            <TextView
                android:id="@+id/txt_minus"
                style="@style/btn_action"
                android:text="@string/btn_minus" />

            <TextView
                android:id="@+id/txt_plus"
                style="@style/btn_action"
                android:text="@string/btn_plus" />

            <TextView
                android:id="@+id/txt_equal"
                style="@style/btn_action"
                android:text="@string/btn_equal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner_action_h"
            style="@style/line"
            android:layout_above="@id/liner1"
            android:layout_toStartOf="@id/liner_action_v">

            <TextView
                android:id="@+id/txt_c"
                style="@style/btn_num"
                android:text="@string/btn_c" />

            <TextView
                android:id="@+id/txt_back"
                style="@style/btn_num"
                android:text="@string/btn_back" />

            <TextView
                android:id="@+id/txt_percent"
                style="@style/btn_num"
                android:text="@string/btn_percent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner1"
            style="@style/line"
            android:layout_above="@id/liner2"
            android:layout_toStartOf="@id/liner_action_v">

            <TextView
                android:id="@+id/txt07"
                style="@style/btn_num"
                android:text="@string/btn_7" />

            <TextView
                android:id="@+id/txt08"
                style="@style/btn_num"
                android:text="@string/btn_8" />

            <TextView
                android:id="@+id/txt09"
                style="@style/btn_num"
                android:text="@string/btn_9" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner2"
            style="@style/line"
            android:layout_above="@+id/liner3"
            android:layout_toStartOf="@+id/liner_action_v">

            <TextView
                android:id="@+id/txt04"
                style="@style/btn_num"
                android:text="@string/btn_4" />

            <TextView
                android:id="@+id/txt05"
                style="@style/btn_num"
                android:text="@string/btn_5" />

            <TextView
                android:id="@+id/txt06"
                style="@style/btn_num"
                android:text="@string/btn_6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner3"
            style="@style/line"
            android:layout_above="@+id/liner4"
            android:layout_toStartOf="@+id/liner_action_v">

            <TextView
                android:id="@+id/txt01"
                style="@style/btn_num"
                android:text="@string/btn_1" />

            <TextView
                android:id="@+id/txt02"
                style="@style/btn_num"
                android:text="@string/btn_2" />

            <TextView
                android:id="@+id/txt03"
                style="@style/btn_num"
                android:text="@string/btn_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner4"
            style="@style/line"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/liner_action_v">

            <TextView
                android:id="@+id/txt00"
                style="@style/btn_num"
                android:text="@string/btn_0" />

            <TextView
                android:id="@+id/txt_dot"
                style="@style/btn_num_23"
                android:text="@string/txt_dot" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/eng_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:id="@id/liner_action_v"
            style="@style/line_vertical"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/txt_log"
                style="@style/btn_action2"
                android:text="@string/btn_log" />

            <TextView
                android:id="@+id/txt_in"
                style="@style/btn_action2"
                android:text="@string/btn_in" />

            <TextView
                android:id="@+id/txt_en"
                style="@style/btn_action2"
                android:text="@string/btn_en" />

            <TextView
                android:id="@+id/txt_x"
                style="@style/btn_action2"
                android:text="@string/btn_x" />

            <TextView
                android:id="@id/txt_division"
                style="@style/btn_action"
                android:text="@string/btn_division" />

            <TextView
                android:id="@id/txt_multiplication"
                style="@style/btn_action"
                android:text="@string/btn_multiplication" />

            <TextView
                android:id="@id/txt_minus"
                style="@style/btn_action"
                android:text="@string/btn_minus" />

            <TextView
                android:id="@id/txt_plus"
                style="@style/btn_action"
                android:text="@string/btn_plus" />

            <TextView
                android:id="@id/txt_equal"
                style="@style/btn_action"
                android:text="@string/btn_equal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_line1"
            style="@style/line"
            android:layout_above="@id/end_line2"
            android:layout_toStartOf="@id/liner_action_v">

            <TextView
                android:id="@+id/txt_sin"
                style="@style/btn_action2"
                android:text="@string/btn_sin" />

            <TextView
                android:id="@+id/txt_asin"
                style="@style/btn_action2"
                android:text="@string/btn_asin" />

            <TextView
                android:id="@+id/txt_sqrt"
                style="@style/btn_action2"
                android:text="@string/btn_sqrt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_line2"
            style="@style/line"
            android:layout_above="@id/end_line3"
            android:layout_toStartOf="@id/liner_action_v">

            <TextView
                android:id="@+id/txt_cos"
                style="@style/btn_action2"
                android:text="@string/btn_cos" />

            <TextView
                android:id="@+id/txt_acos"
                style="@style/btn_action2"
                android:text="@string/btn_acos" />

            <TextView
                android:id="@+id/txt_x2"
                style="@style/btn_action2"
                android:text="@string/btn_x2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_line3"
            style="@style/line"
            android:layout_above="@id/end_line4"
            android:layout_toStartOf="@id/liner_action_v">

            <TextView
                android:id="@+id/txt_tan"
                style="@style/btn_action2"
                android:text="@string/btn_tan" />

            <TextView
                android:id="@+id/txt_atan"
                style="@style/btn_action2"
                android:text="@string/btn_atan" />

            <TextView
                android:id="@+id/txt_xy"
                style="@style/btn_action2"
                android:text="@string/btn_xy" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_line4"
            style="@style/line"
            android:layout_above="@id/liner_action_h"
            android:layout_toStartOf="@id/liner_action_v">

            <TextView
                android:id="@+id/txt_pi"
                style="@style/btn_action2"
                android:text="@string/btn_pi" />

            <TextView
                android:id="@+id/txt_left_s"
                style="@style/btn_action2"
                android:text="@string/btn_left_s" />

            <TextView
                android:id="@+id/txt_right_s"
                style="@style/btn_action2"
                android:text="@string/btn_right_s" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/liner_action_h"
            style="@style/line"
            android:layout_above="@id/liner1"
            android:layout_toStartOf="@id/liner_action_v">

            <TextView
                android:id="@id/txt_c"
                style="@style/btn_num"
                android:text="@string/btn_c" />

            <TextView
                android:id="@id/txt_back"
                style="@style/btn_num"
                android:text="@string/btn_back" />

            <TextView
                android:id="@id/txt_percent"
                style="@style/btn_num"
                android:text="@string/btn_percent" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/liner1"
            style="@style/line"
            android:layout_above="@id/liner2"
            android:layout_toStartOf="@id/liner_action_v">

            <TextView
                android:id="@id/txt07"
                style="@style/btn_num"
                android:text="@string/btn_7" />

            <TextView
                android:id="@id/txt08"
                style="@style/btn_num"
                android:text="@string/btn_8" />

            <TextView
                android:id="@id/txt09"
                style="@style/btn_num"
                android:text="@string/btn_9" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/liner2"
            style="@style/line"
            android:layout_above="@+id/liner3"
            android:layout_toStartOf="@+id/liner_action_v">

            <TextView
                android:id="@id/txt04"
                style="@style/btn_num"
                android:text="@string/btn_4" />

            <TextView
                android:id="@id/txt05"
                style="@style/btn_num"
                android:text="@string/btn_5" />

            <TextView
                android:id="@id/txt06"
                style="@style/btn_num"
                android:text="@string/btn_6" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/liner3"
            style="@style/line"
            android:layout_above="@+id/liner4"
            android:layout_toStartOf="@+id/liner_action_v">

            <TextView
                android:id="@id/txt01"
                style="@style/btn_num"
                android:text="@string/btn_1" />

            <TextView
                android:id="@id/txt02"
                style="@style/btn_num"
                android:text="@string/btn_2" />

            <TextView
                android:id="@id/txt03"
                style="@style/btn_num"
                android:text="@string/btn_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/liner4"
            style="@style/line"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/liner_action_v">

            <TextView
                android:id="@id/txt00"
                style="@style/btn_num"
                android:text="@string/btn_0" />

            <TextView
                android:id="@id/txt_dot"
                style="@style/btn_num_23"
                android:text="@string/txt_dot" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result"
            style="@style/result"
            android:text="@string/btn_0" />

        <TextView
            android:id="@+id/txtoutputResult"
            style="@style/resultString"

            android:text="@string/btn_0" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_switch"
        style="@style/btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_switch_en"
        android:textAllCaps="false"
        android:textSize="14sp" />
</FrameLayout>